finished up element alignment issues in cta chart

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,9 +16,8 @@
 body {
     width: 100vw;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
     background-color: $primary-bg;
+    margin: auto;
 }
 
 button {
@@ -160,29 +159,43 @@ input {
 
 // I figured out how to draw the curved lines with css here: stackoverflow.com/questions/20803489/draw-a-curve-with-css#27849638 
 
-.cta-chart {
+.cta-chart-wrapper {
     background-color: $primary-bg;
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: space-evenly;
-    padding-top: 7%;
+}
+
+.cta-chart {
+    display: flex;
+    max-width: 80%;
+    padding-top: 3%;
+    flex-direction: row;
+    flex-grow: 0;
 
     > div {
         text-align: center;
+        margin: auto;
     
+        &:nth-of-type(odd) {
+            flex-shrink: 0;
+        }
+
+        &:nth-of-type(even) {
+            min-width: rem(250px);
+            margin: -10px;
+        }
+
         i {
             font-size: rem(48px);
             }
     }
         
     &__lines {
-        width: 30%; 
         height: rem(100px);  
         border: solid 1px #999;
         border-color: #999 transparent transparent transparent;
         border-radius: 50%/100px 100px 0 0;
-        margin: -4%;
     }
 }
 
@@ -192,6 +205,7 @@ input {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    justify-content: center;
 
     &__spain1 {
         background-image: url('/images/hero3.png');
@@ -203,9 +217,10 @@ input {
     }
 
     &__wrapper1 {
-        width: 80%;
+        width: 70%;
         display: flex;
         justify-content: flex-start;
+        flex-grow:0;
     }
 
     &__spain2 {
@@ -218,9 +233,10 @@ input {
     }
 
     &__wrapper2 {
-        width: 80%;
+        width: 70%;
         display: flex;
         justify-content: flex-end;
+        flex-grow:0;
     }
 
     &__copy {
